rebrand-hero-banner: fixed issue with mobile footer overlap, and set height at 830px to auto

--- a/content-types/current/hero-banner/css/main.css
+++ b/content-types/current/hero-banner/css/main.css
@@ -148,6 +148,15 @@
   margin: 0.2rem;
 }
 
+.hero-banner.two-column .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+
 
 .bg-fordham-maroon {
   background-color: #7e072a !important;
